<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">Brevaide</string>
    <string name="QCM">QCM</string>
    <string name="Test">Test</string>
    <string name="Stats">Stats</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_qcm">QCM</string>
    <string name="title_activity_stats">Stats</string>
    <string name="validate">Valider</string>
    <string name="error_have_to_check">Vous devez selectionner un élément</string>
    <string name="reset">Reset</string>
    <string name="title_activity_select_discipline">SelectDiscipline</string>
    <string name="reset_qcm_stats">Reset les stats des QCM</string>
    <string name="french">Francais</string>
    <string name="maths">Mathématiques</string>
    <string name="history">Histoire</string>
    <string name="selectDiscipline">Choisis la matière</string>
    <string name="seeErrors">Voir mes erreurs</string>
    <string name="title_activity_see_qcm_errors">SeeQcmErrors</string>
    <string name="action_settings">Settings</string>
    <string name="question_text_label">Question : </string>
    <string name="question_answer_label">La réponse : </string>
    <string name="question_user_answer_label">Votre réponse : </string>

</resources>
